# augur

./: .gitmodules  .readthedocs.yml  LICENSE  README.md  conf.py  environment.yml  generate_test.py  index.rst  installation.rst  pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_sacc_srd_y10_3x2.sacc  test_sacc_srd_y1_3x2.sacc  test_sacc_srd_y1_3x2_all_points.sacc
.github/workflows/: continuous-integration.yaml
_build/doctrees/: environment.pickle  index.doctree
_build/html/: .buildinfo  .buildinfo.bak  api.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
_build/html/.doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree
_build/html/_sources/: api.rst.txt  index.rst.txt
augur/: __init__.py  analyze.py  cli.py  generate.py  parser.py  postprocess.py
augur/generate_utils/: __init__.py  cluster_counts.py  cmb_lensing.py  cosmology.py  covariance.py  harmonic.py  real_space.py  sacc_interface.py  scale_cuts.py  tracers.py
augur/tests/: conftest.py  test.yaml  test_analyze.py  test_analyze_helpers.py  test_config_io.py  test_firecrown_interface.py  test_generate.py  test_generate_helpers.py  test_parse.py  test_utils.py
augur/tracers/: two_point.py
augur/utils/: config_io.py  cov_utils.py  diff_utils.py  eval_utils.py  firecrown_interface.py  firecrown_utils.py  theory_utils.py
benchmarks/: README.md
data/: Y1_3x2_SRD_cov.npy  srd_lens_bins_y1.txt  srd_lens_bins_y10.txt  srd_lens_bins_year_1.npy  srd_lens_bins_year_10.npy  srd_source_bins_y1.txt  srd_source_bins_y10.txt  srd_source_bins_year_1.npy  srd_source_bins_year_10.npy
docs/: requirements.txt
examples/: Cl_sys.txt  README.md  cobaya_mcmc.yaml  config_guide.md  config_test.yml  config_test2.yml  config_test_6x2pt.yml  run_cmb_lensing_tjpcov.py  run_joint_3x2pt_cmb_lensing_tjpcov.py  srd_repo_y1_3x2.yml  srd_v1_3x2.yaml  srd_y10_3x2.yaml  srd_y10_3x2.yml  srd_y1_3x2.yaml  srd_y1_3x2.yml  srd_y1_3x2_cosmosis.ini  srd_y1_3x2_like.py  srd_y1_3x2_mg.yml  srd_y1_3x2_real.yml  srd_y1_3x2_refactor.yml  srd_y1_3x2_values.ini  srd_y1_3x2pt_cmb_lensing_tjpcov.yml  srd_y1_cmb_lensing_tjpcov.yml
examples/cov_srd/: CovarianceCalculator_srd.py  conf_covariance_gaussian_fsky_fourier_srd.yaml  cosmo_srd.yaml  generate_srd.py
note/: README.md  acknowledgments.tex  authors.csv  main.tex
