[metadata]
name = augur
version = attr: augur._version.__version__
author = DESC Team
description = DESC Cosmology Forecasting Tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LSSTDESC/augur
license_files = LICENSE

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    click
    jinja2
    healpy
    numpydoc
    qp-prob

[options.packages.find]
exclude =
    examples*
    tests*

[options.entry_points]
console_scripts =
    augur = augur.cli:run